update based on repo

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" id="repos">
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -188,6 +188,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/loadRepos.js"></script>
 
 </body>
 
