--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
           </div>
         </div>
         <div class="row" id="repos">
+          Loading...
         </div>
       </div>
     </section><!-- End Portfolio Section -->
