--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="row" id="repos">
-          Loading...
-        </div>
+        <div class="row" id="repos"></div>
       </div>
     </section><!-- End Portfolio Section -->
 
